HFP-1428 Set correct size for summary icon on IE11

--- a/styles/navigation-line.css
+++ b/styles/navigation-line.css
@@ -251,7 +251,7 @@
   width: 1.7em;
 
   background: transparent url(../fonts/summary-icon.svg) no-repeat center;
-  background-size: 1.7em;
+  background-size: 3.4em 1.6em;
 }
 
 .h5p-course-presentation .h5p-progressbar .h5p-progressbar-part {
